# IINI4003-Cpp-for-programmers

./: .gitignore  .gitmodules  README.md
01 - Basic C++/: CMakeLists.txt  README.md  exercise_A.cpp  exercise_B.cpp
02 - Pointers and References/: CMakeLists.txt  README.md  main.cpp
03 - Objects/: CMakeLists.txt  README.md  exercise_1and2.cpp  exercise_4.cpp
03 - Objects/exercise_3/: commodity.cpp  commodity.hpp  main.cpp
04 - Containers, auto and lambda/: CMakeLists.txt  README.md  exercise_1.cpp  exercise_2.cpp
05 - Life and Death, Smart pointers and Polymorfism/: CMakeLists.txt  Exercise1.cpp  Exercise2.cpp  README.md
06 - Function objects and Thread programming/: CMakeLists.txt  Exercise1.cpp  Exercise2.cpp  README.md
07 - Operator Overloading/: CMakeLists.txt  README.md
07 - Operator Overloading/Exercise 1/: fraction.cpp  fraction.h  main1.cpp
07 - Operator Overloading/Exercise 2/: Set.cpp  Set.h  main2.cpp
08 - Templates/: CMakeLists.txt  Exercise1.cpp  Exercise2.cpp  README.md
09 - STL-algorithms/: CMakeLists.txt  README.md  main.cpp
10 - Third party libraries/: CMakeLists.txt  README.md  main.cpp
10 - Third party libraries/components/: Cube.cpp  Ground.cpp  Sphere.cpp  World.cpp
10 - Third party libraries/libs/: .gitattributes
10 - Third party libraries/libs/imgui-sfml/: CMakeLists.txt
Exam/: CMakeLists.txt  README.md  Task 1.cpp  Task 2.cpp  Task 3.cpp  Task 4.cpp  Task 5.cpp
Previous Exams/: CMakeLists.txt
Previous Exams/2019 - December/: README.md  Task 1.cpp  Task 2.cpp  Task 3.cpp  Task 4.cpp  Task 5.cpp
Previous Exams/2020 - May/: README.md  Task 1.cpp  Task 2.cpp  Task 3.cpp  Task 4.cpp  Task 5.cpp
